Fix spacing inside room mentions

--- a/client/text_chunk.less
+++ b/client/text_chunk.less
@@ -6,6 +6,9 @@
 .bb-room-mention .fas{
   color: var(--text-color);
 }
+.bb-room-mention .room-type {
+  display: inline;
+}
 .bb-room-mention.solved .room-type {
   color: forestgreen;
   body.darkMode & {
